Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
-  <!-- Your code here -->
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Lion Roar!">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="ROAR!" title="King of the "
 
 </body>
 </html>
